0310_추천시스템_Hybrid방식_학습

--- a/bigdata/KYS_추천알고리즘학습/추천_시스템(Recommender_System)_KYS.ipynb
+++ b/bigdata/KYS_추천알고리즘학습/추천_시스템(Recommender_System)_KYS.ipynb
@@ -16,6 +16,15 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "OWmwhJvMLxu-"
+      },
+      "source": [
+        "강의 유튜브 : https://www.youtube.com/watch?v=6TP51jvjLsE"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "oIAnNuuX2EOr"
       },
       "source": [
@@ -54,7 +63,7 @@
       "source": [
         "!pip install scikit-surprise"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -97,7 +106,7 @@
         "from surprise import Dataset\r\n",
         "from surprise.model_selection import cross_validate"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -113,7 +122,7 @@
         "data = Dataset.load_builtin('ml-100k', prompt=False)\r\n",
         "data.raw_ratings[:10]"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -154,7 +163,7 @@
       "source": [
         "model = SVD()"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -169,7 +178,7 @@
       "source": [
         "cross_validate(model, data, measures=['rmse', 'mae'], cv=5, verbose=True)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -238,7 +247,7 @@
         "import numpy as np\r\n",
         "from surprise import Dataset"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -260,7 +269,7 @@
         "data = Dataset.load_builtin('ml-100k', prompt=False)\r\n",
         "raw_data = np.array(data.raw_ratings, dtype=int)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -273,7 +282,7 @@
         "raw_data[:, 0] -= 1\r\n",
         "raw_data[:, 1] -= 1"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -292,7 +301,7 @@
         "shape = (n_users + 1, n_movies + 1)\r\n",
         "shape"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -324,7 +333,7 @@
         "  adj_matrix[user_id][movie_id] = 1.\r\n",
         "adj_matrix"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -371,7 +380,7 @@
         "\r\n",
         "print('Best Match: {}, Best Match ID: {}'.format(best_match, best_match_id))"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -401,7 +410,7 @@
         "    recommend_list.append(i)\r\n",
         "print(recommend_list)"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -447,7 +456,7 @@
         "\r\n",
         "print('Best Match: {}, Best Match ID: {}'.format(best_match, best_match_id))"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -475,7 +484,7 @@
         "    recommend_list.append(i)\r\n",
         "print(recommend_list)"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -513,7 +522,7 @@
         "  dot = np.dot(v1, v2)\r\n",
         "  return dot / (norm1 * norm2)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -539,7 +548,7 @@
         "\r\n",
         "print('Best Match: {}, Best Match ID: {}'.format(best_match, best_match_id))"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -567,7 +576,7 @@
         "    recommend_list.append(i)\r\n",
         "print(recommend_list)"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -603,7 +612,7 @@
         "  adj_matrix[user_id][movie_id] = rating\r\n",
         "adj_matrix"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -649,7 +658,7 @@
         "\r\n",
         "print('Best Match: {}, Best Match ID: {}'.format(best_match, best_match_id))"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -683,7 +692,7 @@
         "\r\n",
         "print('Best Match: {}, Best Match ID: {}'.format(best_match, best_match_id))"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -724,7 +733,7 @@
         "from surprise import Dataset\r\n",
         "from surprise.model_selection import cross_validate"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -735,7 +744,7 @@
       "source": [
         "data = Dataset.load_builtin('ml-100k', prompt=False)"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -760,7 +769,7 @@
         "model = KNNBasic()\r\n",
         "cross_validate(model, data, measures=['rmse', 'mae'], cv=5, n_jobs=4, verbose=True)"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -822,7 +831,7 @@
         "model = SVD()\r\n",
         "cross_validate(model, data, measures=['rmse', 'mae'], cv=5, n_jobs=4, verbose=True)"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -884,7 +893,7 @@
         "model = NMF()\r\n",
         "cross_validate(model, data, measures=['rmse', 'mae'], cv=5, n_jobs=4, verbose=True)"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -946,7 +955,7 @@
         "model = SVDpp()\r\n",
         "cross_validate(model, data, measures=['rmse', 'mae'], cv=5, n_jobs=4, verbose=True)"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1009,7 +1018,7 @@
         "from sklearn.decomposition import randomized_svd, non_negative_factorization\r\n",
         "from surprise import Dataset"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1027,7 +1036,7 @@
         "raw_data[:, 0] -= 1\r\n",
         "raw_data[:, 1] -= 1"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1054,7 +1063,7 @@
         "shape = (n_users + 1, n_movies + 1)\r\n",
         "shape"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1080,7 +1089,7 @@
         "for user_id, movie_id, rating, time in raw_data:\r\n",
         "  adj_matrix[user_id][movie_id] = rating"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1095,7 +1104,7 @@
       "source": [
         "adj_matrix"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1127,7 +1136,7 @@
         "U, S, V = randomized_svd(adj_matrix, n_components=2)\r\n",
         "S = np.diag(S)"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1144,7 +1153,7 @@
         "print(S.shape)\r\n",
         "print(V.shape)"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1169,7 +1178,7 @@
       "source": [
         "np.matmul(np.matmul(U, S), V)"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1231,7 +1240,7 @@
         "\r\n",
         "print('Best Match: {}, Best Match ID: {}'.format(best_match, best_match_id))"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1259,7 +1268,7 @@
         "    recommend_list.append(i)\r\n",
         "print(recommend_list)"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1304,7 +1313,7 @@
         "\r\n",
         "print('Best Match: {}, Best Match ID: {}'.format(best_match, best_match_id))"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1331,7 +1340,7 @@
         "    recommend_list.append(i)\r\n",
         "print(recommend_list)"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1363,7 +1372,7 @@
       "source": [
         "adj_matrix"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1397,7 +1406,7 @@
       "source": [
         "A, B, iter = non_negative_factorization(adj_matrix, n_components=2)"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1421,7 +1430,7 @@
       "source": [
         "np.matmul(A, B)"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1481,7 +1490,7 @@
         "\n",
         "print('Best Match: {}, Best Match ID: {}'.format(best_match, best_match_id))"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1509,7 +1518,7 @@
         "    recommend_list.append(i)\n",
         "print(recommend_list)"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1552,7 +1561,7 @@
         "\n",
         "print('Best Match: {}, Best Match ID: {}'.format(best_match, best_match_id))"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1579,7 +1588,7 @@
         "    recommend_list.append(i)\n",
         "print(recommend_list)"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
