--- a/frontend/DailyTask/210310_와이어프레임_Day1.md
+++ b/frontend/DailyTask/210310_와이어프레임_Day1.md
@@ -6,13 +6,12 @@
 
 링크 - https://ovenapp.io/project/CeXm2zcavVZT6yTohay1RbN8LZjcn6pv#CznDg
 
-![와이어프레임_메인페이지](.\Images\와이어프레임_메인페이지.PNG)
+<img src='./Images/와이어프레임_메인페이지.PNG'>
 
-![와이어프레임_회원가입](./Images\와이어프레임_회원가입.PNG)
+<img src='./Images/와이어프레임_회원가입.PNG'>
 
-![와이어프레임_로그인](./Images\와이어프레임_로그인.PNG)
+<img src='./Images/와이어프레임_로그인.PNG'>
 
-![와이어프레임_메인추천](./Images\와이어프레임_메인추천.PNG)
+<img src='./Images/와이어프레임_메인추천.PNG'>
 
-![와이어프레임_메인메뉴](./Images\와이어프레임_메인메뉴.PNG)
-
+<img src='./Images/와이어프레임_메인메뉴.PNG'>
